# Rankify-Assist

./: .AI-INSTRUCTIONS.md  .gitignore  ARCHITECTURE-COMPLETE.md  ARCHITECTURE_UPDATE_SUMMARY.md  COMPLETE-SETUP-GUIDE.md  COMPLETE-WORKFLOW-CONFIG.md  CONTRIBUTING.md  FINAL-ARCHITECTURE.md  FINAL-CHECKLIST.md  LICENSE  PROJECT_ARCHITECTURE_DIAGRAM.mmd  README.md  SETUP-COMPLETE.md  SETUP_WIZARD.bat  START-HERE.md  UPDATE-PROOF-ARCHITECTURE.md  flash_firmware.bat  monitor.bat  update-nanobrowser.ps1
cloud-bridge/: .env.example  package-lock.json  package.json  supabase-schema.sql  supabase-update-access-id.sql  vercel.json
cloud-bridge/api/: execute.js  ping.js  poll.js  register.js  result.js
cloud-bridge/lib/: auth.js  (+2 more)
docs/: ARCHITECTURE_DIAGRAM.mmd  BEGINNER_BUILD_GUIDE.md  COMPLETE-VISUAL-SETUP.md  EXTENSION_DEV.md  EXTENSION_GUIDE.md  FIRMWARE_GUIDE.md  GITHUB_UPLOAD.md  PLATFORM_CONFIG.md  SETUP.md  WORKFLOW_GUIDE.md
extension/: background.iife.js  manifest.json
extension-RAW/: manifest.json  package-lock.json  package.json  webpack.config.js
extension-ready/: manifest.json  options.html  options.js  test-storage.html
firmware/: CMakeLists.txt  FIRMWARE_IMPLEMENTATION_GUIDE.md  GUIDE.md  Kconfig  OTA_UPDATE_GUIDE.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  project_build.ini
firmware/config/: TUYA_T5AI_CORE_RANKIFY.config
firmware/include/: app_chat_bot.h  reset_netcfg.h  tuya_config.h
firmware/src/: app_chat_bot.c  reset_netcfg.c  tuya_main.c
mcp-servers/: README.md
nanobrowser-working/: README.md  background.iife.js  manifest.json
(+170 files in other folders)
